<resources>
    <string name="app_name">FindFriends</string>

    <!--strings related to register-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="register">Register</string>
    <string name="not_register">Not Registered</string>
    <string name="login">Login</string>
    <string name="logout_btn">Log Out</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_login">Sign in</string>
    <string name="welcome_text">WELCOME !!!</string>
    <string name="InviteFriends">Invite Friends</string>

    <string name="forgot_password"><a href="http://google.com">Forgot Password?</a></string>

    <string name="next">Next</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>


    <!-- Activity Names -->
    <string name="title_activity_welcome">Welcome to Friend Locator!</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_password_recovery">Recover Password</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_friends_invitation_pending">Pending Invitations</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Title Names -->
    <string name="welcome_page_title">Welcome to Friend Locator!</string>
    <string name="login_title">Sign in to Friend Locator!</string>
    <string name="register_title">Register with Friend Locator!</string>
    <string name="action_settings">Settings</string>

    <!-- Buttons -->
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="recover_password_button">Recover Password</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>

    <!-- Text URLs -->
    <string name="register_link">Register!</string>
    <string name="forgot_link">Forgot your password?</string>

    <!-- Form Placeholders -->
    <string name="hint_name">Name</string>
    <string name="hint_name_new">New Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_new">New Password</string>
    <string name="hint_password_verify">Verify Password</string>

    <!-- Text Strings -->
    <string name="have_no_account">Have no account?</string>
    <string name="user_account">User Account</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="update_account">Update Account</string>
    <string name="app_details">Application Details</string>
    <string name="help_title">Help</string>
    <string name="help_subtitle">Get some help how to use the application</string>
    <string name="version_title">Version</string>
    <string name="version_subtitle">1.1.0</string>
    <string name="header_activity_pending_invitations">Pending friend invitations</string>
    <string name="invitations_pending">Have Pending Invitations!</string>

    <!-- Buttons -->
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>

    <!-- Views -->
    <string name="no_friends_found">No friends found.</string>

    <!-- Login -->
    <string name="action_Refresh">Refresh</string>
    <string name="action_help">Help</string>
    <string name="Logout">Logout</string>
    <string name="title_activity_invite_friend">InviteFriendActivity</string>
    <string name="title_activity_accept_request">AcceptRequestActivity</string>
    <string name="title_activity_list_friends">ListFriends</string>
    <string name="title_activity_maps_">Map</string>
    <string name="title_activity_maps_activity_new">Map</string>

</resources>
