<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:id="@+id/RelativeLayout1"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/my_toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--android:elevation="4dp"-->
            <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
            <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

        <EditText
            android:id="@+id/emailSF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="106dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" >
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/signin_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordSF"
            android:layout_marginTop="27dp"
            android:textColor="@color/white"
            android:background="@drawable/oval_background"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/notreg_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signin_btn"
            android:textColor="@color/white"
            android:background="@drawable/oval_background"
            android:layout_marginTop="27dp"
            android:text="@string/not_register" />

        <EditText
            android:id="@+id/passwordSF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailSF"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

    </RelativeLayout>












