<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <!-- The main content view -->
    <RelativeLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


<!-- Code -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.sunshine.mohan.findfriends.DetailsActivity"
        android:background="@drawable/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <!--<TextView-->
        <!--android:id="@+id/nameWF"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignTop="@+id/imageView1"-->
        <!--android:layout_marginLeft="39dp"-->
        <!--android:layout_marginStart="39dp"-->
        <!--android:layout_toEndOf="@+id/imageView1"-->
        <!--android:layout_toRightOf="@+id/imageView1"-->
        <!--android:text="@string/hint_name"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="14sp" />-->
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/welcome_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <Button
            android:id="@+id/list_friends_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:textColor="@color/white"
            android:background="@drawable/oval_background"
            android:text="Check Out NearBy Friends" />
        <Button
            android:id="@+id/invite_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_friends_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:textColor="@color/white"
            android:background="@drawable/oval_background"
            android:text="@string/InviteFriends" />

        <Button
            android:id="@+id/accept_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/invite_btn"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/oval_background"
            android:layout_marginTop="52dp"
            android:text="Accept Friend Request" />

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accept_btn"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/oval_background"
            android:layout_marginTop="52dp"
            android:text="@string/logout_btn" />

        <!--<TextView-->
        <!--android:id="@+id/emailWF"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBottom="@+id/imageView1"-->
        <!--android:layout_alignLeft="@+id/nameWF"-->
        <!--android:layout_alignStart="@+id/nameWF"-->
        <!--android:text="@string/email_hint"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="14sp" />-->

        <!--<ImageView-->
        <!--android:id="@+id/imageView1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignLeft="@+id/logout_btn"-->
        <!--android:layout_alignStart="@+id/logout_btn"-->
        <!--android:layout_below="@+id/textView1"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:contentDescription="@null"-->
        <!--android:scaleType="fitXY" />-->


    </RelativeLayout>





















    <!-- The navigation drawer -->
    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:id="@+id/drawerPane"
        android:layout_gravity="start">

        <!-- Profile Box -->

        <RelativeLayout
            android:id="@+id/profileBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/material_blue_grey_800"
            android:padding="8dp" >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/app_icon1"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@+id/avatar"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <!--android:text="HAI"-->

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="4dp"
                    android:text="View Profile"
                    android:textColor="#fff"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>

        <!-- List of Actions (pages) -->
        <ListView
            android:id="@+id/navList"
            android:layout_width="280dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/profileBox"
            android:choiceMode="singleChoice"
            android:background="#ffffffff" />

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>



